--- a/Full Examples/pokemon2.html
+++ b/Full Examples/pokemon2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Pokemon 2</title>
-	<script src="https://cdn.jsdelivr.net/gh/CianFlint/jml@c134c6b/jml.js"></script> <!-- Use Latest Version -->
+	<script src="https://cdn.jsdelivr.net/gh/CianFlint/jml@2036ae0/jml.min.js"></script> <!-- Use Latest Version -->
 	<link rel="stylesheet" href="pokemon2.css">
 </head>
 <body>
